--- a/level4-A/lesson-19/main.scss
+++ b/level4-A/lesson-19/main.scss
@@ -1,5 +1,5 @@
-$text-font: 'Trebuchet MS';
-$title-font: 'Arial';
+$text-font: "Trebuchet MS";
+$title-font: "Arial";
 
 $primary: #2078a0;
 $primary-light: #d4e6f0;
@@ -22,7 +22,7 @@ body {
   overflow: hidden;
   position: relative;
   padding-bottom: 62px;
-  background-image: url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/bg-header.png'), url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/04-bg-footer.png');
+  background-image: url("https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/bg-header.png"), url("https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/04-bg-footer.png");
   background-position: top, bottom;
   background-size: contain;
   background-repeat: no-repeat;
@@ -150,7 +150,7 @@ body {
       .arrow-part {
         position: relative;
         &:before {
-          content: '';
+          content: "";
           position: absolute;
           left: -20px;
           top: 5px;
@@ -214,6 +214,7 @@ body {
 
   // Act
   .act-content {
+    margin-bottom: 10%;
     margin-top: 36px;
     height: fit-content;
 
@@ -238,19 +239,37 @@ body {
 @media screen and (max-width: 900px) {
   .html-lesson-wrapper {
     min-height: unset;
+     .program-rank {
+      position: absolute;
+      top: clamp(20px, 4vw, 40px);
+      left: clamp(23px, 4vw, 48px);
+    }
+    .title {
+      top: clamp(45px, 8.4vw, 80px);
+      left: clamp(38px, 4.5vw, 55px);
+    }
+    .divider {
+      &.d1,
+      &.d2 {
+        margin-top: clamp(18px, 3.4vw, 28px);
+      }
+    }
+    .section {
+      left: calc(-16% + 36px);
+    }
+    .section.words {
+      left: calc(-14% + 40px);
+    }
+    .arrow-part {
+      &:before {
+        left: -4.5% !important;
+        top: 0.6vw !important;
+      }
+    }
     .see-content {
       margin-top: clamp(22px, 3.8vw, 36px);
       .article {
         margin-bottom: clamp(20px, 3.7vw, 29px);
-      }
-      .col {
-        margin-right: clamp(10px, 2.2vw, 16px);
-        p {
-          margin-bottom: clamp(16px, 3.2vw, 24px);
-          &.name {
-            width: clamp(30px, 8.4vw, 70px);
-          }
-        }
       }
     }
     .try-content {
@@ -299,6 +318,14 @@ body {
       &:before {
         left: -4.5% !important;
         top: 0.6vw !important;
+      }
+    }
+    .act-content table {
+      th {
+        padding: 2px;
+      }
+      td {
+        padding: 3px;
       }
     }
   }
